--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,10 +11,10 @@ Version: 1.0.0
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #1abd5e;
-  --theme2: #1abd5e;
+  --theme: #0d75bc;
+  --theme2: #0d75bc;
   --header: #222222;
-  --base: #1abd5e;
+  --base: #0d75bc;
   --text: #5E5F63;
   --text2: #8A8C94;
   --border: #EEEFF4;
